# IotDashboard

backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/backend/: celery_worker.py  config.json  database.py  main.py  models.py  schemas.py  tasks.py  temperature_generator.py
frontend/iotdashboard/: package-lock.json  package.json
frontend/iotdashboard/src/: App.js  Dashboard.js
